@@ -9,7 +9,7 @@ Gem::Specification.new do |s|
 
   s.required_rubygems_version = Gem::Requirement.new(">= 0") if s.respond_to? :required_rubygems_version=
   s.authors = ["Gaspard Bucher"]
-  s.date = %q{2014-04-18}
+  s.date = %q{2014-06-28}
   s.default_executable = %q{zena}
   s.description = %q{zena is a Ruby on Rails  CMS (content managment system) with a focus on usability, ease of customization and web 2.0 goodness (application like behaviour).}
   s.email = %q{gaspard@teti.ch}
@@ -416,6 +416,7 @@ Gem::Specification.new do |s|
     "bricks/zena/zena/migrate/20131105160420_add_skin_id_to_sites.rb",
     "bricks/zena/zena/migrate/20131105175822_add_profile_to_users.rb",
     "bricks/zena/zena/migrate/20140213120038_fix_idx_scope.rb",
+    "bricks/zena/zena/migrate/20140628140247_add_site_readonly.rb",
     "config/boot.rb",
     "config/bricks.yml",
     "config/database_example.yml",
@@ -2237,87 +2238,87 @@ Gem::Specification.new do |s|
     s.specification_version = 3
 
     if Gem::Version.new(Gem::VERSION) >= Gem::Version.new('1.2.0') then
-      s.add_runtime_dependency(%q<syntax>, ["= 1.0.0"])
-      s.add_runtime_dependency(%q<gettext>, ["= 2.1.0"])
-      s.add_runtime_dependency(%q<ruby-recaptcha>, ["= 1.0.3"])
-      s.add_runtime_dependency(%q<authlogic>, ["= 2.1.9"])
-      s.add_runtime_dependency(%q<rails>, ["= 2.3.18"])
+      s.add_runtime_dependency(%q<safe_yaml>, ["= 0.8.0"])
       s.add_runtime_dependency(%q<shoulda>, ["= 2.10.3"])
-      s.add_runtime_dependency(%q<simple_xlsx_writer>, [">= 0"])
-      s.add_runtime_dependency(%q<differ>, ["= 0.1.2"])
-      s.add_runtime_dependency(%q<rubyless>, ["= 0.8.11"])
-      s.add_runtime_dependency(%q<property>, ["= 2.3.4"])
-      s.add_runtime_dependency(%q<uuidtools>, ["= 2.0.0"])
-      s.add_runtime_dependency(%q<tzinfo>, [">= 0"])
-      s.add_runtime_dependency(%q<RedCloth>, ["= 3.0.4"])
-      s.add_runtime_dependency(%q<gem_plugin>, [">= 0"])
-      s.add_runtime_dependency(%q<fast_gettext>, ["~> 0.4.16"])
       s.add_runtime_dependency(%q<json>, ["= 1.5.1"])
-      s.add_runtime_dependency(%q<hpricot>, [">= 0"])
-      s.add_runtime_dependency(%q<open4>, [">= 0"])
-      s.add_runtime_dependency(%q<httmultiparty>, ["= 0.3.8"])
+      s.add_runtime_dependency(%q<daemons>, [">= 0"])
+      s.add_runtime_dependency(%q<uuidtools>, ["= 2.0.0"])
       s.add_runtime_dependency(%q<versions>, ["= 0.3.1"])
       s.add_runtime_dependency(%q<will_paginate>, ["~> 2.3.12"])
-      s.add_runtime_dependency(%q<safe_yaml>, ["= 0.8.0"])
+      s.add_runtime_dependency(%q<tzinfo>, [">= 0"])
+      s.add_runtime_dependency(%q<httmultiparty>, ["= 0.3.8"])
+      s.add_runtime_dependency(%q<gem_plugin>, [">= 0"])
+      s.add_runtime_dependency(%q<rails>, ["= 2.3.18"])
+      s.add_runtime_dependency(%q<authlogic>, ["= 2.1.9"])
       s.add_runtime_dependency(%q<yamltest>, ["= 0.7.0"])
-      s.add_runtime_dependency(%q<httparty>, ["= 0.7.8"])
+      s.add_runtime_dependency(%q<hpricot>, [">= 0"])
+      s.add_runtime_dependency(%q<property>, ["= 2.3.4"])
+      s.add_runtime_dependency(%q<fast_gettext>, ["~> 0.4.16"])
+      s.add_runtime_dependency(%q<differ>, ["= 0.1.2"])
+      s.add_runtime_dependency(%q<RedCloth>, ["= 3.0.4"])
+      s.add_runtime_dependency(%q<rubyless>, ["= 0.8.11"])
+      s.add_runtime_dependency(%q<open4>, [">= 0"])
+      s.add_runtime_dependency(%q<simple_xlsx_writer>, [">= 0"])
+      s.add_runtime_dependency(%q<ruby-recaptcha>, ["= 1.0.3"])
       s.add_runtime_dependency(%q<querybuilder>, ["= 1.2.3"])
-      s.add_runtime_dependency(%q<daemons>, [">= 0"])
+      s.add_runtime_dependency(%q<syntax>, ["= 1.0.0"])
+      s.add_runtime_dependency(%q<gettext>, ["= 2.1.0"])
+      s.add_runtime_dependency(%q<httparty>, ["= 0.7.8"])
     else
-      s.add_dependency(%q<syntax>, ["= 1.0.0"])
-      s.add_dependency(%q<gettext>, ["= 2.1.0"])
-      s.add_dependency(%q<ruby-recaptcha>, ["= 1.0.3"])
-      s.add_dependency(%q<authlogic>, ["= 2.1.9"])
-      s.add_dependency(%q<rails>, ["= 2.3.18"])
+      s.add_dependency(%q<safe_yaml>, ["= 0.8.0"])
       s.add_dependency(%q<shoulda>, ["= 2.10.3"])
-      s.add_dependency(%q<simple_xlsx_writer>, [">= 0"])
-      s.add_dependency(%q<differ>, ["= 0.1.2"])
-      s.add_dependency(%q<rubyless>, ["= 0.8.11"])
-      s.add_dependency(%q<property>, ["= 2.3.4"])
-      s.add_dependency(%q<uuidtools>, ["= 2.0.0"])
-      s.add_dependency(%q<tzinfo>, [">= 0"])
-      s.add_dependency(%q<RedCloth>, ["= 3.0.4"])
-      s.add_dependency(%q<gem_plugin>, [">= 0"])
-      s.add_dependency(%q<fast_gettext>, ["~> 0.4.16"])
       s.add_dependency(%q<json>, ["= 1.5.1"])
-      s.add_dependency(%q<hpricot>, [">= 0"])
-      s.add_dependency(%q<open4>, [">= 0"])
-      s.add_dependency(%q<httmultiparty>, ["= 0.3.8"])
+      s.add_dependency(%q<daemons>, [">= 0"])
+      s.add_dependency(%q<uuidtools>, ["= 2.0.0"])
       s.add_dependency(%q<versions>, ["= 0.3.1"])
       s.add_dependency(%q<will_paginate>, ["~> 2.3.12"])
-      s.add_dependency(%q<safe_yaml>, ["= 0.8.0"])
+      s.add_dependency(%q<tzinfo>, [">= 0"])
+      s.add_dependency(%q<httmultiparty>, ["= 0.3.8"])
+      s.add_dependency(%q<gem_plugin>, [">= 0"])
+      s.add_dependency(%q<rails>, ["= 2.3.18"])
+      s.add_dependency(%q<authlogic>, ["= 2.1.9"])
       s.add_dependency(%q<yamltest>, ["= 0.7.0"])
-      s.add_dependency(%q<httparty>, ["= 0.7.8"])
+      s.add_dependency(%q<hpricot>, [">= 0"])
+      s.add_dependency(%q<property>, ["= 2.3.4"])
+      s.add_dependency(%q<fast_gettext>, ["~> 0.4.16"])
+      s.add_dependency(%q<differ>, ["= 0.1.2"])
+      s.add_dependency(%q<RedCloth>, ["= 3.0.4"])
+      s.add_dependency(%q<rubyless>, ["= 0.8.11"])
+      s.add_dependency(%q<open4>, [">= 0"])
+      s.add_dependency(%q<simple_xlsx_writer>, [">= 0"])
+      s.add_dependency(%q<ruby-recaptcha>, ["= 1.0.3"])
       s.add_dependency(%q<querybuilder>, ["= 1.2.3"])
-      s.add_dependency(%q<daemons>, [">= 0"])
+      s.add_dependency(%q<syntax>, ["= 1.0.0"])
+      s.add_dependency(%q<gettext>, ["= 2.1.0"])
+      s.add_dependency(%q<httparty>, ["= 0.7.8"])
     end
   else
-    s.add_dependency(%q<syntax>, ["= 1.0.0"])
-    s.add_dependency(%q<gettext>, ["= 2.1.0"])
-    s.add_dependency(%q<ruby-recaptcha>, ["= 1.0.3"])
-    s.add_dependency(%q<authlogic>, ["= 2.1.9"])
-    s.add_dependency(%q<rails>, ["= 2.3.18"])
+    s.add_dependency(%q<safe_yaml>, ["= 0.8.0"])
     s.add_dependency(%q<shoulda>, ["= 2.10.3"])
-    s.add_dependency(%q<simple_xlsx_writer>, [">= 0"])
-    s.add_dependency(%q<differ>, ["= 0.1.2"])
-    s.add_dependency(%q<rubyless>, ["= 0.8.11"])
-    s.add_dependency(%q<property>, ["= 2.3.4"])
-    s.add_dependency(%q<uuidtools>, ["= 2.0.0"])
-    s.add_dependency(%q<tzinfo>, [">= 0"])
-    s.add_dependency(%q<RedCloth>, ["= 3.0.4"])
-    s.add_dependency(%q<gem_plugin>, [">= 0"])
-    s.add_dependency(%q<fast_gettext>, ["~> 0.4.16"])
     s.add_dependency(%q<json>, ["= 1.5.1"])
-    s.add_dependency(%q<hpricot>, [">= 0"])
-    s.add_dependency(%q<open4>, [">= 0"])
-    s.add_dependency(%q<httmultiparty>, ["= 0.3.8"])
+    s.add_dependency(%q<daemons>, [">= 0"])
+    s.add_dependency(%q<uuidtools>, ["= 2.0.0"])
     s.add_dependency(%q<versions>, ["= 0.3.1"])
     s.add_dependency(%q<will_paginate>, ["~> 2.3.12"])
-    s.add_dependency(%q<safe_yaml>, ["= 0.8.0"])
+    s.add_dependency(%q<tzinfo>, [">= 0"])
+    s.add_dependency(%q<httmultiparty>, ["= 0.3.8"])
+    s.add_dependency(%q<gem_plugin>, [">= 0"])
+    s.add_dependency(%q<rails>, ["= 2.3.18"])
+    s.add_dependency(%q<authlogic>, ["= 2.1.9"])
     s.add_dependency(%q<yamltest>, ["= 0.7.0"])
-    s.add_dependency(%q<httparty>, ["= 0.7.8"])
+    s.add_dependency(%q<hpricot>, [">= 0"])
+    s.add_dependency(%q<property>, ["= 2.3.4"])
+    s.add_dependency(%q<fast_gettext>, ["~> 0.4.16"])
+    s.add_dependency(%q<differ>, ["= 0.1.2"])
+    s.add_dependency(%q<RedCloth>, ["= 3.0.4"])
+    s.add_dependency(%q<rubyless>, ["= 0.8.11"])
+    s.add_dependency(%q<open4>, [">= 0"])
+    s.add_dependency(%q<simple_xlsx_writer>, [">= 0"])
+    s.add_dependency(%q<ruby-recaptcha>, ["= 1.0.3"])
     s.add_dependency(%q<querybuilder>, ["= 1.2.3"])
-    s.add_dependency(%q<daemons>, [">= 0"])
+    s.add_dependency(%q<syntax>, ["= 1.0.0"])
+    s.add_dependency(%q<gettext>, ["= 2.1.0"])
+    s.add_dependency(%q<httparty>, ["= 0.7.8"])
   end
 end
 
